--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "homepages": "https://vitbon.github.io/react_ws_wiliot",
+  "homepage": "https://vitbon.github.io/react_ws_wiliot/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
